tests/snapshots/run_wpt_conformance__onnx_add_float32_large_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 large inputs",
    "onnx",
    "PASS",
)
