tests/snapshots/run_wpt_conformance__onnx_add_float32_with_special_character_names.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 with special character names",
    "onnx",
    "PASS",
)
